--- a/src/main/resources/templates/arbitro/partidos.html
+++ b/src/main/resources/templates/arbitro/partidos.html
@@ -109,7 +109,7 @@
                     function geocodeAndShow(address){
                         if(!mapboxToken){ showErrorNoToken(); return; }
                         var q = encodeURIComponent(address);
-                        var url = 'https://api.mapbox.com/geocoding/v5/mapbox.places/' + q + '.json?access_token=' + mapboxToken + '&limit=1&language=es&types=address,poi';
+                        var url = 'https://api.mapbox.com/geocoding/v5/mapbox.places/' + q + '.json?access_token=' + mapboxToken + '&limit=1&language=es&country=co&types=address,poi';
                         fetch(url).then(function(r){ return r.json(); }).then(function(data){ console.log('Mapbox geocode response for', address, data); if(data && data.features && data.features.length>0){ var center = data.features[0].center; openModalWithCoords(center[1], center[0], address); } else { alert('No se encontró la ubicación para: ' + address); } }).catch(function(e){ console.error(e); alert('Error al buscar la ubicación'); });
                     }
 
